--- a/grid-work2/grid.html
+++ b/grid-work2/grid.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grid-work</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./grid.css">
 </head>
 <body>
     <h2 style="color: blue;margin-left: 50px;">New Grid Layout</h2>
